lib/my_plugin_ffi_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/my_plugin_ffi.h` and `src/software_info.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class MyPluginFfiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  MyPluginFfiBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  MyPluginFfiBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// A very short-lived native function.
  ///
  /// For very short-lived functions, it is fine to call them on the main isolate.
  /// They will block the Dart execution while running the native function, so
  /// only do this for native functions which are guaranteed to be short-lived.
  int sum(int a, int b) {
    return _sum(a, b);
  }

  late final _sumPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>('sum');
  late final _sum = _sumPtr.asFunction<int Function(int, int)>();

  /// A longer lived native function, which occupies the thread calling it.
  ///
  /// Do not call these kind of native functions in the main isolate. They will
  /// block Dart execution. This will cause dropped frames in Flutter applications.
  /// Instead, call these native functions on a separate isolate.
  int sum_long_running(int a, int b) {
    return _sum_long_running(a, b);
  }

  late final _sum_long_runningPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
        'sum_long_running',
      );
  late final _sum_long_running = _sum_long_runningPtr
      .asFunction<int Function(int, int)>();

  int subtract(int a, int b) {
    return _subtract(a, b);
  }

  late final _subtractPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
        'subtract',
      );
  late final _subtract = _subtractPtr.asFunction<int Function(int, int)>();

  ffi.Pointer<ffi.Char> hello() {
    return _hello();
  }

  late final _helloPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>('hello');
  late final _hello = _helloPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Pointer<ffi.Char>> get_languages(
    ffi.Pointer<ffi.Int> out_len,
  ) {
    return _get_languages(out_len);
  }

  late final _get_languagesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Pointer<ffi.Char>> Function(ffi.Pointer<ffi.Int>)
        >
      >('get_languages');
  late final _get_languages = _get_languagesPtr
      .asFunction<
        ffi.Pointer<ffi.Pointer<ffi.Char>> Function(ffi.Pointer<ffi.Int>)
      >();

  void free_languages(ffi.Pointer<ffi.Pointer<ffi.Char>> arr, int len) {
    return _free_languages(arr, len);
  }

  late final _free_languagesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Int)
        >
      >('free_languages');
  late final _free_languages = _free_languagesPtr
      .asFunction<void Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, int)>();

  ffi.Pointer<ffi.Pointer<ffi.Char>> get_map(ffi.Pointer<ffi.Int> out_pairs) {
    return _get_map(out_pairs);
  }

  late final _get_mapPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Pointer<ffi.Char>> Function(ffi.Pointer<ffi.Int>)
        >
      >('get_map');
  late final _get_map = _get_mapPtr
      .asFunction<
        ffi.Pointer<ffi.Pointer<ffi.Char>> Function(ffi.Pointer<ffi.Int>)
      >();

  void free_map(ffi.Pointer<ffi.Pointer<ffi.Char>> arr, int pairs) {
    return _free_map(arr, pairs);
  }

  late final _free_mapPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Int)
        >
      >('free_map');
  late final _free_map = _free_mapPtr
      .asFunction<void Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, int)>();

  Coordinate create_coordinate(double latitude, double longitude) {
    return _create_coordinate(latitude, longitude);
  }

  late final _create_coordinatePtr =
      _lookup<ffi.NativeFunction<Coordinate Function(ffi.Double, ffi.Double)>>(
        'create_coordinate',
      );
  late final _create_coordinate = _create_coordinatePtr
      .asFunction<Coordinate Function(double, double)>();

  Place create_place(
    ffi.Pointer<ffi.Char> name,
    double latitude,
    double longitude,
  ) {
    return _create_place(name, latitude, longitude);
  }

  late final _create_placePtr =
      _lookup<
        ffi.NativeFunction<
          Place Function(ffi.Pointer<ffi.Char>, ffi.Double, ffi.Double)
        >
      >('create_place');
  late final _create_place = _create_placePtr
      .asFunction<Place Function(ffi.Pointer<ffi.Char>, double, double)>();

  double distance(Coordinate arg0, Coordinate arg1) {
    return _distance(arg0, arg1);
  }

  late final _distancePtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(Coordinate, Coordinate)>>(
        'distance',
      );
  late final _distance = _distancePtr
      .asFunction<double Function(Coordinate, Coordinate)>();

  ffi.Pointer<ffi.Char> reverse(ffi.Pointer<ffi.Char> str, int length) {
    return _reverse(str, length);
  }

  late final _reversePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, ffi.Int)
        >
      >('reverse');
  late final _reverse = _reversePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, int)>();

  void getBaseVersion(ffi.Pointer<ffi.Char> ver) {
    return _getBaseVersion(ver);
  }

  late final _getBaseVersionPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'getBaseVersion',
      );
  late final _getBaseVersion = _getBaseVersionPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Function that takes a callback
  void call_callback(int value, IntCallback callback) {
    return _call_callback(value, callback);
  }

  late final _call_callbackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, IntCallback)>>(
        'call_callback',
      );
  late final _call_callback = _call_callbackPtr
      .asFunction<void Function(int, IntCallback)>();

  /// Get DLL version information
  /// Parameters:
  /// versionString - Buffer to receive version string (e.g., "1.0.0")
  /// bufferSize    - Size of the buffer
  /// Returns: 0 on success, -1 on error
  int GetLibraryVersion(ffi.Pointer<ffi.Char> versionString, int bufferSize) {
    return _GetLibraryVersion(versionString, bufferSize);
  }

  late final _GetLibraryVersionPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int)>
      >('GetLibraryVersion');
  late final _GetLibraryVersion =
      _GetLibraryVersionPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, int)
      >();

  /// Enumerate installed software
  /// Parameters:
  /// infoArray - Array to receive software info
  /// arraySize - Input: array capacity, Output: actual count
  /// Returns: Number of software found, -1 on error
  int EnumerateInstalledSoftware(
    ffi.Pointer<SOFTWARE_INFO> infoArray,
    ffi.Pointer<ffi.Int> arraySize,
  ) {
    return _EnumerateInstalledSoftware(infoArray, arraySize);
  }

  late final _EnumerateInstalledSoftwarePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<SOFTWARE_INFO>, ffi.Pointer<ffi.Int>)
        >
      >('EnumerateInstalledSoftware');
  late final _EnumerateInstalledSoftware =
      _EnumerateInstalledSoftwarePtr.asFunction<
        int Function(ffi.Pointer<SOFTWARE_INFO>, ffi.Pointer<ffi.Int>)
      >();

  /// Check if software is installed by name (partial match, case-insensitive)
  /// Parameters:
  /// softwareName - Software name to search for (partial match supported)
  /// Returns: 1 = installed, 0 = not installed, -1 = error
  int IsSoftwareInstalled(ffi.Pointer<ffi.Char> softwareName) {
    return _IsSoftwareInstalled(softwareName);
  }

  late final _IsSoftwareInstalledPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'IsSoftwareInstalled',
      );
  late final _IsSoftwareInstalled =
      _IsSoftwareInstalledPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();
}

final class Coordinate extends ffi.Struct {
  @ffi.Double()
  external double latitude;

  @ffi.Double()
  external double longitude;
}

final class Place extends ffi.Struct {
  external ffi.Pointer<ffi.Char> name;

  external Coordinate coordinate;
}

/// Define a callback type
typedef IntCallback = ffi.Pointer<ffi.NativeFunction<IntCallbackFunction>>;
typedef IntCallbackFunction = ffi.Void Function(ffi.Int);
typedef DartIntCallbackFunction = void Function(int);

@ffi.Packed(1)
final class _SOFTWARE_INFO extends ffi.Struct {
  /// Software display name
  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> name;

  /// Publisher name
  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> publisher;

  /// Version string
  @ffi.Array.multi([64])
  external ffi.Array<ffi.Char> version;

  /// Installation date (YYYYMMDD)
  @ffi.Array.multi([32])
  external ffi.Array<ffi.Char> installDate;

  /// Installation directory
  @ffi.Array.multi([260])
  external ffi.Array<ffi.Char> installLocation;

  /// Uninstall command
  @ffi.Array.multi([260])
  external ffi.Array<ffi.Char> uninstallString;

  /// Icon path
  @ffi.Array.multi([260])
  external ffi.Array<ffi.Char> displayIcon;

  /// Size in KB
  @ffi.UnsignedInt()
  external int estimatedSize;

  /// 1 = 64-bit, 0 = 32-bit
  @ffi.Int()
  external int is64Bit;
}

typedef SOFTWARE_INFO = _SOFTWARE_INFO;

const int _WIN32_WINNT = 2560;

const int WINVER = 2560;
